--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-cayman
 title: 中国VPS攻略
+description: 2023国外好用便宜的VPS推荐，美国香港VPS服务器避坑攻略，支持支付宝，VPS服务器可用于搭建网站、搭梯子科学上网翻墙、跑任务、WordPress VPS建站。
